--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html, body {
 }
 
 #logo_image{
-    background-image: url(./images/handmade.jpg);
+    background-image: url(./images/handmade.webp);
     width: 50px;
     height: 50px;
     background-size: cover;
@@ -140,7 +140,7 @@ html, body {
     height:50%;
     width: 100%;
     background-color: tan;
-    background-image: url(./images/image2.avif);
+    background-image: url(./images/image2.webp);
     background-size: cover;
     background-position: center;
     
@@ -160,11 +160,11 @@ html, body {
     }
 
 #logo{
-    background-image: url(./images/handmade.jpg);
+    background-image: url(./images/handmade.webp);
     width: 60px;
     height: 60px;
     background-size: cover;
-}
+}git
 
 #company-brand{
     margin-left: 150%;
